# StarWarsGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Base64/: base64.cpp
GameFramework/: AnimatedGraphic.cpp  AnimatedGraphic.h  Callback.h  Collision.h  CollisionManager.cpp  CollisionManager.h  Game.cpp  Game.h  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  InputHandler.cpp  InputHandler.h  LevelParser.cpp  LevelParser.h  LoaderParams.h  MenuButton.cpp  MenuButton.h  ScrollingBackground.cpp  ScrollingBackground.h  ShooterObject.cpp  ShooterObject.h  SoundManager.cpp  SoundManager.h  StateParser.cpp  StateParser.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h
GameObjects/: Bullet.h  BulletHandler.cpp  BulletHandler.h  Enemy.h  Eskeletor.h  Glider.h  Level1Boss.h  MenuButton.cpp  MenuButton.h  Player.cpp  Player.h  RoofTurret.h  ShooterObject.cpp  ShooterObject.h  ShotGlider.h  Turret.h
Levels/: Layer.h  Level.cpp  Level.h  ObjectLayer.cpp  ObjectLayer.h  TileLayer.cpp  TileLayer.h
States/: GameOverState.cpp  GameOverState.h  MainMenuState.cpp  MainMenuState.h  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h
assets/: attack.xml  map1.tmx  map2.tmx
xmlparsing/: tinyxml.h
